k8s/ping-pong-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-ping-pong
  namespace: project
spec:
  selector:
    app: python-ping-pong2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
